tests/fixtures/valid/simple_import.cyl
// Simple import test
import os;

fn main() -> void {
    // Basic import test
}
