tests/fixtures/invalid/missing_function_body.cyl
// Missing function body
fn test();
